added back to suits list link

--- a/app/views/wingsuits/index.html.haml
+++ b/app/views/wingsuits/index.html.haml
@@ -1,6 +1,6 @@
 .container
   .page-header
-    %h1= 'Wingsuits'
+    %h1= 'Suits'
 
   - if can? :create, :wingsuit
     = link_to 'New', new_wingsuit_path, class: 'btn btn-default'
