--- a/app/views/wingsuits/show.html.haml
+++ b/app/views/wingsuits/show.html.haml
@@ -1,4 +1,7 @@
 .container.top-buffer
+  %a{href: wingsuits_path}
+    %i.fa.fa-chevron-left
+    Suits list
   .row
     - if @wingsuit.photo.exists?
       .col-sm-3
