Added event sponsors

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -22,6 +22,12 @@
     .col-md-12
       %h4= t('.judges') + ':'
       %ol#judges-list
+  .row.top-buffer
+    .col-md-12
+      %h4 Event sponsors:
+    .col-md-12
+      #sponsors
+    
 
 -# Modals
 = render 'show_result_modal'
