--- a/app/assets/javascripts/app/templates/sponsor.jst.ejs
+++ b/app/assets/javascripts/app/templates/sponsor.jst.ejs
@@ -1,5 +1,5 @@
 <div class="col-md-3 text-center">
 	<a href="<%= sponsor.get('website') %>">
-		<img src="<%= sponsor.get('logo_url') %>"  data-toggle="tooltip" title="<%= sponsor.get('name') %>"/>
+		<img class="img-responsive" src="<%= sponsor.get('logo_url') %>"  data-toggle="tooltip" title="<%= sponsor.get('name') %>"/>
 	</a>
 </div>
