--- a/app/views/events/_show_result_modal.html.haml
+++ b/app/views/events/_show_result_modal.html.haml
@@ -50,6 +50,8 @@
               .col-md-4.col-sm-4.col-xs-6
                 .param-val
                   .avg-val.fa-2x#dd_distance
+                  .min-max
+                    %span.dotted-underline#total_distance
                   .dst-unit= t 'units.m'
                 .result-param
                   %i.fa.fa-fw.fa.fa-arrows-h
