--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -15,6 +15,12 @@
         .col-sm-10.col-md-11
           %h1
             = profile_name
+            - if @profile.country
+              %small
+                (
+                %span.text-warning{'data-toggle'=> 'tooltip', title: @profile.country.name}
+                  = @profile.country.code.upcase
+                )
         .col-sm-2.col-md-1
           - if can? :update, @profile
             = link_to content_tag(:span, nil, :class => 'fa fa-pencil'),
