--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -16,9 +16,15 @@
   .row
     .col-sm-12.text-center.bg-info
       %h2.light-header
-        = 'World BASE Race 2015 @Hellesylt'
+        = 'Hungarian WS National/FAIN Comp 2015 - The Piranha Battle'
         %a= 'See results'
-      = link_to '', tournament_path(1), class: 'overlay-link'
+      = link_to '', event_path(14), class: 'overlay-link'
+    .col-sm-12.text-center.bg-info
+      %h2.light-header
+        = 'IX. Markó Mike\'s Wingsuit Boogie Hungary '
+        %a= 'See results'
+      = link_to '', event_path(12), class: 'overlay-link'
+
 .container-fluid
   .row
     .col-sm-12.text-center
