Fixed select2 dropdown, refactored competitors, event settings, organizers.

--- a/app/assets/javascripts/app/templates/result_cell.jst.ejs
+++ b/app/assets/javascripts/app/templates/result_cell.jst.ejs
@@ -1,8 +1,8 @@
 <td data-round-id="<%= id %>" data-role="<%= role %>" class="text-right 
 	<% if (can_manage) { %>
-		'edit-result'
+		edit-result
 	<% } else { %>
-		'show-result'
+		show-result
 	<% } %>
 	">
 </td>
