Update to rails 4.2.4, added google maps script in layout, track map view using turbolinks

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,4 +38,5 @@
 
     = render 'errors/ajax_error_message'
     = render 'layouts/footer'
+    %script{src: 'https://maps.googleapis.com/maps/api/js', 'data-turbolinks-eval' => false}
     = javascript_include_tag 'application', 'data-turbolinks-track' => true, 'data-turbolinks-eval' => false
