--- a/app/views/tracks/_header.html.haml
+++ b/app/views/tracks/_header.html.haml
@@ -45,8 +45,7 @@
           %i.fa.fa-compass
           = 'Google earth'
       %a.btn.btn-default{href: google_maps_track_path(track),
-                         class: ('active' if action_name == 'google_maps'),
-                         :'data-no-turbolink' => 'true'}
+                         class: ('active' if action_name == 'google_maps')}
         %i.fa.fa-compass
         = 'Google maps'
       - if action_name == 'show'
