--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -23,6 +23,12 @@ body, p, ol, ul, td {
   line-height: 18px;
 }
 
+a, button, label, span {
+  transition-property: border-color, background, color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
+}
+
 .loading-bg {
   background: url(<%= asset_path 'loading.gif' %>) no-repeat center center;
 }
