Track#edit rewritten from the ground. Optimized performance for #edit and #show actions

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -9,6 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap-datepicker3
+ *= require vendor/select2.min
+ *= require vendor/select2-bootstrap
  *= require_self
  *= require_tree .
  */
