Deleted competitions links

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -10,20 +10,7 @@
           %i.fa.fa-upload
           = t('application.header.upload_track')
       .col-3.hidden-xs.col-sm-3
-        %img.img-responsive{:src => asset_path('skyderby-logo.png')}
-
-.container-fluid
-  .row
-    .col-sm-12.text-center.bg-info
-      %h2.light-header
-        = 'Hungarian WS National/FAIN Comp 2015 - The Piranha Battle'
-        %a= 'See results'
-      = link_to '', event_path(14), class: 'overlay-link'
-    .col-sm-12.text-center.bg-info
-      %h2.light-header
-        = 'IX. Markó Mike\'s Wingsuit Boogie Hungary '
-        %a= 'See results'
-      = link_to '', event_path(12), class: 'overlay-link'
+        %img.img-responsive{src: asset_path('skyderby-logo.png')}
 
 .container-fluid
   .row
