--- a/app/views/tracks/edit.html.haml
+++ b/app/views/tracks/edit.html.haml
@@ -19,7 +19,7 @@
       = f.hidden_field 'ff_start', id: 'ff_start'
       = f.hidden_field 'ff_end', id: 'ff_end'
 
-      - if current_user.has_role? :admin
+      - if current_user && current_user.has_role?(:admin)
         .form-group
           %span.col-sm-3.control-label
             = t('static_pages.index.track_form.name')
