--- a/app/views/tracks/_track.html.haml
+++ b/app/views/tracks/_track.html.haml
@@ -19,3 +19,4 @@
     %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.time)}
       = track.time.result if track.time
   %td.text-info= track.created_at.strftime('%d.%m.%Y')
+  %td= track_icons(track)
